--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ body {
 .button{
   padding: 10px 30px;
   color: #fff;
-  background-color: green;
+  background-color: #3f9d82;
   margin-top: 20px;
   display: block;
 }
