--- a/styles/shipping.module.css
+++ b/styles/shipping.module.css
@@ -33,8 +33,8 @@
   .description {
     line-height: 1.5;
     font-size: 2rem;
-    background: #00573f;
-    color: #00573f;
+    background: white;
+    color: white;
     text-decoration: underline;
   }
 
