--- a/styles/Home_Module.css
+++ b/styles/Home_Module.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'MyWebFont';
+  src:  url('los_andes__lota_grotesque_alt_1_black-webfont.woff') format('woff');
+}
 .App {
     border: 2px solid #d3d3d3;
     border-radius: 0.5em;
@@ -8,12 +12,15 @@
     padding: 1em;
     text-align: left;
     width: 600px;
+    font-family: 'MyWebFont';
   }
   
   .form {
     padding: 1em;
+    font-family: 'MyWebFont';
   }
   
   .label {
     font-weight: 600;
+    font-family: 'MyWebFont';
   }
