--- a/styles/Navbarr.module.css
+++ b/styles/Navbarr.module.css
@@ -1,27 +1,36 @@
-
+@font-face {
+    font-family: 'MyWebFont';
+    src:  url('los_andes__lota_grotesque_alt_1_black-webfont.woff') format('woff');
+}
 .nav{
     background-color: #00573f;
     padding: 20px;
     box-shadow: 2px 1px 1px #cccc;
+    font-family: 'MyWebFont';
 }
 .container{
-display: flex;
-justify-content: space-between;
-align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'MyWebFont';
 }
 .container ul{
     display: flex;
+    font-family: 'MyWebFont';
 
 }
 
 .container ul li{
     margin-left: 30px;
+    font-family: 'MyWebFont';
 }
 .container ul li a{
-    color: #defe11
+    color: #defe11;
+    font-family: 'MyWebFont';
 }
 .logo{
     font-size: 3rem;
     font-weight: 500;
-    color: #defe11
+    color: #defe11;
+    font-family: 'MyWebFont';
 }
