--- a/styles/creditCard.module.css
+++ b/styles/creditCard.module.css
@@ -18,9 +18,11 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  font-family: 'MyWebFont';
 }
 
 .container {
   max-width: 1200px;
   margin: auto;
+  font-family: 'MyWebFont';
 }
