--- a/styles/product.module.css
+++ b/styles/product.module.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: 'MyWebFont';
+    src:  url('los_andes__lota_grotesque_alt_1_black-webfont.woff') format('woff');
+}
 .product{
     border: 1px solid #ccc;
     padding:20px;
     text-align:center;
+    font-family: 'MyWebFont';
    
 }
