--- a/styles/shipping.module.css
+++ b/styles/shipping.module.css
@@ -1,33 +1,44 @@
+@font-face {
+  font-family: 'MyWebFont';
+  src:  url('los_andes__lota_grotesque_alt_1_black-webfont.woff') format('woff');
+}
 .a {
     color: #defe11;
     text-decoration: none;
+    font-family: 'MyWebFont';
+
   }
 
   .b {
     color: #7a862f;
     text-decoration: none;
+    font-family: 'MyWebFont';
   }
 
   .title a {
     background: #00573f;
     text-decoration: none;
+    font-family: 'MyWebFont';
   }
 
   .title a:hover,
   .title a:focus,
   .title a:active {
     text-decoration: underline;
+    font-family: 'MyWebFont';
   }
 
   .title {
     margin: 0;
     line-height: 1.15;
     font-size: 4rem;
+    font-family: 'MyWebFont';
   }
 
   .title,
   .description {
     text-align: center;
+    font-family: 'MyWebFont';
   }
 
   .description {
@@ -36,12 +47,14 @@
     background: white;
     color: white;
     text-decoration: underline;
+    font-family: 'MyWebFont';
   }
 
   .card {
     width: 650px;
     height: 500px;
     background: #00573f;
+    font-family: 'MyWebFont';
     margin: 3rem;
     flex-basis: 95%;
     padding: 2rem;
@@ -63,12 +76,14 @@
   .card h3 {
     margin: 0 0 1rem 0;
     font-size: 1.8rem;
+    font-family: 'MyWebFont';
   }
 
   .card p {
     margin: 0;
     font-size: 1.25rem;
     line-height: 1.5;
+    font-family: 'MyWebFont';
   }
   .card check {
     width: 100%;
@@ -76,11 +91,12 @@
     display: flex;
     justify-content: left;
     align-items: center;
+    font-family: 'MyWebFont';
   }
   .card detail {
     padding:0 1.2rem;
     font-size: 1.8rem;
     flex: 1;
     display: flex;
-   
+    font-family: 'MyWebFont';
   }
