--- a/styles/globals.css
+++ b/styles/globals.css
@@ -137,6 +137,25 @@ body {
   
 }
 
+
+.button {
+  width: 100%;
+  padding: 1rem 0.5rem;
+  margin-top: 1.5rem;
+  outline: none;
+  border: none;
+  border-radius: 7px;
+  background-color: #00573f;
+  color: #defe11;
+  font-size:2rem;
+  letter-spacing: 1px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  position: relative;
+  z-index: 9;
+  font-family: 'MyWebFont';
+}
+
 #form button {
   width: 100%;
   padding: 1rem 0.5rem;
