--- a/styles/shipping.module.css
+++ b/styles/shipping.module.css
@@ -159,7 +159,7 @@
       #00573f,
       #247a62,
       #6c9610,
-      #a6be0d,
+      #73a00b,
       #00573f
     );
     background-size:400%;
