--- a/styles/creditCard.module.css
+++ b/styles/creditCard.module.css
@@ -22,8 +22,11 @@
 }
 
 .container {
+  display: flex; 
   max-width: 1200px;
   margin: auto;
+  justify-content: center;
+  align-items: center;
   font-family: 'MyWebFont';
 }
 
